targets/zynq_7020/arm/ck.h

/* --- Transition Lattice --- */

typedef struct {
    int64_t  TL[CK_NUM_OPS][CK_NUM_OPS];
    int64_t  TL3[CK_NUM_OPS][CK_NUM_OPS][CK_NUM_OPS];
    int64_t  total_transitions;
    int64_t  total_trigrams;
    int64_t  sentences_eaten;
} CK_TransitionLattice;
/* ═══════════════════════════════════════════════════════════════
 * §6  THE ORGANISM — everything in one struct
 * ═══════════════════════════════════════════════════════════════ */

typedef struct {
    /* Vortex A: Being (CPU, micro) */
    CK_Body              body;
    CK_SystemObserver    observer;
    CK_GPUControl        gpu;
    CK_NetworkOrgan      network;

    /* Vortex B: Doing (GPU, macro) */
    CK_TransitionLattice tl;
    CK_GPULattice        lattice;

    /* Boundary: Becoming (composition) */
    CK_CoherenceBridge   bridge;
    CK_DreamEngine       dream;
    CK_SecurityOrgan     security;
    CK_HeartbeatState    heartbeat;

    /* Experience layers */
    CK_ExperienceStack   experience;
} CK_Organism;
/* ck_ffi.c — Python bridge */
CK_EXPORT int    ck_ffi_fuse(const int8_t* ops, int len);
CK_EXPORT int    ck_ffi_fuse_table(const int8_t* ops, int len, int table_id);
CK_EXPORT float  ck_ffi_coherence_chain(const int8_t* ops, int len);
CK_EXPORT float  ck_ffi_information(const int8_t* ops, int len);
CK_EXPORT int    ck_ffi_shape(const int8_t* ops, int len);
CK_EXPORT int    ck_ffi_bump_signature(const int8_t* ops, int len);
CK_EXPORT int    ck_ffi_is_bump(int a, int b);
CK_EXPORT float  ck_ffi_s_star(float sigma, float V, float A);
CK_EXPORT float  ck_ffi_coherence_eak(float E, float A, float K);
CK_EXPORT int    ck_ffi_band(float C);
/* ck_ffi.c — TL operations */
CK_EXPORT void   ck_ffi_tl_eat_ops(CK_TransitionLattice* tl, const int8_t* ops, int len);
CK_EXPORT float  ck_ffi_tl_entropy(const CK_TransitionLattice* tl);
CK_EXPORT int    ck_ffi_tl_predict(const CK_TransitionLattice* tl, int current, float* prob);
/* ck_ffi.c — organism lifecycle */
CK_EXPORT CK_Organism* ck_ffi_create(void);
CK_EXPORT void   ck_ffi_destroy(CK_Organism* org);
CK_EXPORT int    ck_ffi_tick(CK_Organism* org);
CK_EXPORT void   ck_ffi_save(const CK_Organism* org, const char* dir);
CK_EXPORT int    ck_ffi_load(CK_Organism* org, const char* dir);